--- a/OneDo/View/Controls/FolderListControl.xaml
+++ b/OneDo/View/Controls/FolderListControl.xaml
@@ -348,9 +348,7 @@
         <DataTemplate x:Key="FolderItemDataTemplate" x:DataType="vmItems:FolderItemObject">
             <Border Background="Transparent"
                     BorderBrush="Transparent"
-                    BorderThickness="1,1,1,0"
-                    Holding="FolderItem_Holding"
-                    RightTapped="FolderItem_RightTapped">
+                    BorderThickness="1,1,1,0">
                 <FlyoutBase.AttachedFlyout>
                     <MenuFlyout>
                         <controls:MenuFlyoutIconItem Command="{x:Bind FolderCommands.EditCommand}"
@@ -364,6 +362,7 @@
                     </MenuFlyout>
                 </FlyoutBase.AttachedFlyout>
                 <i:Interaction.Behaviors>
+                    <behaviors:FlyoutMenuBehavior />
                     <ic:EventTriggerBehavior EventName="PointerEntered">
                         <ic:ChangePropertyAction PropertyName="Background" Value="{ThemeResource SystemControlBackgroundListLowBrush}" />
                         <ic:ChangePropertyAction PropertyName="BorderBrush" Value="{ThemeResource SystemControlForegroundBaseLowBrush}" />
