--- a/OneDo/View/Modals/FolderPicker.xaml
+++ b/OneDo/View/Modals/FolderPicker.xaml
@@ -16,7 +16,7 @@
     <UserControl.Resources>
 
         <DataTemplate x:Key="FolderTemplate" x:DataType="vmItems:FolderItemObject">
-            <Border Background="{x:Bind Color, Mode=OneWay, Converter={StaticResource ColorToBrushConverter}}" Tapped="Folder_Tapped">
+            <Border Background="{Binding Color, Converter={StaticResource ColorToBrushConverter}}" Tapped="Folder_Tapped">
                 <TextBlock Margin="12,0"
                            VerticalAlignment="Center"
                            Foreground="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
@@ -28,9 +28,19 @@
     </UserControl.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView Padding="0,8,0,0"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0"
+                   Margin="16,16,16,4"
+                   HorizontalAlignment="Left"
+                   Style="{ThemeResource BaseTextBlockStyle}"
+                   Text="Move to folder" />
+        <ListView Grid.Row="1"
+                  Padding="0,8,0,0"
                   ItemTemplate="{StaticResource FolderTemplate}"
-                  ItemsSource="{x:Bind VM.Folders}">
+                  ItemsSource="{x:Bind VM.FolderList.Items, Mode=OneWay}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="BorderThickness" Value="0" />
@@ -42,15 +52,14 @@
                     <Setter Property="MinWidth" Value="0" />
                     <Setter Property="MinHeight" Value="0" />
                     <Setter Property="Height" Value="32" />
-                    <Setter Property="Margin" Value="8,0,8,8" />
+                    <Setter Property="Margin" Value="16,-8,16,16" />
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="ListViewItem">
                                 <ListViewItemPresenter x:Name="Presenter"
                                                        HorizontalAlignment="Left"
-                                                       HorizontalContentAlignment="Stretch"
+                                                       HorizontalContentAlignment="Left"
                                                        VerticalContentAlignment="Stretch"
-                                                       Foreground="{Binding Color, Converter={StaticResource ColorToBrushConverter}}"
                                                        BorderThickness="{TemplateBinding BorderThickness}"
                                                        CheckBoxBrush="Transparent"
                                                        CheckBrush="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
@@ -64,8 +73,8 @@
                                                        FocusBorderBrush="{ThemeResource SystemControlForegroundAltHighBrush}"
                                                        FocusSecondaryBorderBrush="{ThemeResource SystemControlForegroundBaseHighBrush}"
                                                        PlaceholderBackground="Transparent"
-                                                       PointerOverBackground="Transparent"
-                                                       PointerOverForeground="{Binding Color, Converter={StaticResource ColorToBrushConverter}}"
+                                                       PointerOverBackground="{Binding Color, Converter={StaticResource ColorToBrushConverter}}"
+                                                       PointerOverForeground="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
                                                        PressedBackground="Transparent"
                                                        ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
                                                        SelectedBackground="{Binding Color, Converter={StaticResource ColorToBrushConverter}}"
