--- a/OneDo/View/Controls/NoteListControl.xaml
+++ b/OneDo/View/Controls/NoteListControl.xaml
@@ -74,6 +74,8 @@
 
         <DataTemplate x:Key="NoteItemTemplate" x:DataType="vmItems:NoteItemObject">
             <controls:SlidableListItem Background="{ThemeResource SystemControlBackgroundAltHighBrush}"
+                                       BorderBrush="{ThemeResource SystemControlBackgroundBaseLowBrush}"
+                                       BorderThickness="0,0,0,1"
                                        LeftBackground="Khaki"
                                        LeftForeground="Black"
                                        LeftGlyph="&#xE7C1;"
@@ -100,15 +102,25 @@
                     <ic:EventTriggerBehavior EventName="Tapped">
                         <ic:InvokeCommandAction Command="{x:Bind NoteCommands.EditCommand, Mode=OneWay}" CommandParameter="{x:Bind Mode=OneWay}" />
                     </ic:EventTriggerBehavior>
+                    <ic:DataTriggerBehavior Binding="{x:Bind Entity.IsFlagged, Mode=OneWay}" Value="True">
+                        <ic:ChangePropertyAction PropertyName="Background" Value="#FFFFE0" />
+                    </ic:DataTriggerBehavior>
                 </i:Interaction.Behaviors>
                 <Grid Margin="0,8" VerticalAlignment="Center">
-                    <StackPanel Orientation="Horizontal">
-                        <FontIcon Margin="12,0,4,0"
-                                  FontSize="18"
-                                  Glyph="&#xE8FB;"
-                                  Visibility="{x:Bind IsCompleted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
-                        <TextBlock Margin="8,0,0,0" Text="{x:Bind Title, Mode=OneWay}" />
-                    </StackPanel>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0"
+                               Margin="8,0"
+                               Text="{x:Bind Title, Mode=OneWay}"
+                               TextTrimming="CharacterEllipsis" />
+                    <FontIcon Grid.Column="1"
+                              Margin="0,0,12,0"
+                              Foreground="{ThemeResource SystemControlForegroundAccentBrush}"
+                              FontSize="16"
+                              Glyph="&#xE129;"
+                              Visibility="{x:Bind Entity.IsFlagged, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
                 </Grid>
             </controls:SlidableListItem>
         </DataTemplate>
